# grafos

./: .gitignore  LICENSE  README.md  pyproject.toml
src/algorithm/: bfs.py  connectivity.py  utils.py
src/base/: edge.py  enums.py  graph.py  vertex.py
src/examples/: ex01_bfs.py  ex03_connectivity.py
