[project]
name = "grafos"
version = "0.1.0"
description = "Exemplos e exercícios da disciplina de Grafos"
authors = [{ name = "Paulo César Rodacki Gomes", email = "paulo.gomes@ifc.edu.br" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "base", from = "src" },
    { include = "algorithm", from = "src" },
    { include = "examples", from = "src" }
]

[project.scripts]
ex01-bfs = "examples.ex01_bfs:main"
ex03-connectivity = "examples.ex03_connectivity:main"